--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,17 @@
 FROM node:18
+
 WORKDIR /app
 
+
 COPY package*.json ./
+
 RUN npm install -g nodemon && npm install
 
+
+COPY prisma ./prisma
+
+
 COPY . .
+
 
 CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
