--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,22 @@
+# FROM node:18
+
+# WORKDIR /app
+
+
+# COPY package*.json ./
+
+# RUN npm install -g nodemon && npm install
+
+
+# COPY prisma ./prisma
+
+
+# COPY . .
+
+
+# CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
+
+
 FROM node:18
 
 WORKDIR /app
@@ -5,13 +24,15 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install -g nodemon && npm install
 
-
-COPY prisma ./prisma
+RUN npm install -g prisma nodemon && npm install
 
 
 COPY . .
 
 
-CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
+RUN npx prisma generate
+
+
+CMD ["nodemon", "src/index.js"]
+
