dockerfile para dev

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,38 +1,13 @@
-# FROM node:18
-
-# WORKDIR /app
-
-
-# COPY package*.json ./
-
-# RUN npm install -g nodemon && npm install
-
-
-# COPY prisma ./prisma
-
-
-# COPY . .
-
-
-# CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
-
-
 FROM node:18
 
 WORKDIR /app
 
-
+# Instala solo dependencias necesarias
 COPY package*.json ./
+RUN npm install
 
-
-RUN npm install -g prisma nodemon && npm install
-
-
+# Copia todo el código
 COPY . .
 
-
-RUN npx prisma generate
-
-
-CMD ["nodemon", "src/index.js"]
-
+# Genera Prisma Client (en runtime, donde sí hay acceso a DATABASE_URL)
+CMD ["sh", "-c", "npx prisma generate && node src/index.js"]
