--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.js",
     "scripts": {
       "dev": "nodemon src/index.js",
-      "prisma": "prisma"
+      "prisma": "prisma",
+          "start": "node src/index.js"
     },
     "dependencies": {
       "@prisma/client": "^5.0.0",
