--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,17 +19,15 @@ services:
     depends_on:
       - db
 
-  frontend:
-    build: ./frontend
-    depends_on:
-      - backend
-
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./frontend
+  
     ports:
       - "80:80"
     depends_on:
-      - frontend
+      - backend
+
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/dist:/usr/share/nginx/html
