--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Etapa 1: construcción de React
+# Etapa 1: build de React
 FROM node:18 AS build
 WORKDIR /app
 COPY . .
@@ -8,4 +8,5 @@ RUN npm run build
 # Etapa 2: nginx sirve el contenido
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 RUN chmod -R 755 /usr/share/nginx/html
