--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   db:
     image: postgres
@@ -7,6 +8,8 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: clinica
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     expose:
       - "5432"
 
@@ -19,15 +22,22 @@ services:
     depends_on:
       - db
 
-  nginx:
+  frontend:
     build:
       context: ./frontend
-  
-    ports:
-      - "80:80"
+    dockerfile: Dockerfile
     depends_on:
       - backend
 
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/dist:/usr/share/nginx/html
+
+volumes:
+  pgdata:
