--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,15 +31,16 @@ services:
     depends_on:
       - backend
 
+services:
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./frontend
     ports:
       - "80:80"
-    depends_on:
-      - frontend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/dist:/usr/share/nginx/html
+
+ 
 
 volumes:
   pgdata:
