--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,14 @@
+# Etapa 1: build de React
 FROM node:18 AS build
 WORKDIR /app
-COPY . .
+
+COPY package*.json ./
 RUN npm install
+
+COPY . .
 RUN npm run build
+
+# Etapa 2: nginx sirve el contenido
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+
