--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,11 @@
-# Etapa 1: build de React
+# Etapa 1: build de Vite
 FROM node:18 AS build
 WORKDIR /app
-
-COPY package*.json ./
-RUN npm install
-
 COPY . .
+RUN npm install
 RUN npm run build
 
-# Etapa 2: nginx sirve el contenido
+# Etapa 2: servidor Nginx
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
