--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,16 +22,16 @@ services:
     depends_on:
       - db
 
-  nginx:
+   nginx:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
     ports:
       - "80:80"
     depends_on:
       - backend
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/nginx:/etc/nginx/conf.d
+
 
 volumes:
   pgdata:
