--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,3 +12,5 @@ COPY . .
 # Genera Prisma Client (en runtime, donde sí hay acceso a DATABASE_URL)
 RUN chmod +x ./node_modules/.bin/prisma
 CMD ["sh", "-c", "./node_modules/.bin/prisma generate && node src/index.js"]
+RUN chmod +x ./node_modules/.bin/prisma
+RUN chmod +x ./node_modules/@prisma/engines/* || true
