--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,36 +2,37 @@
 
 # WORKDIR /app
 
+
 # COPY package*.json ./
-# RUN npm install
+
+# RUN npm install -g nodemon && npm install
+
+
+# COPY prisma ./prisma
 
 
 # COPY . .
 
 
-# RUN chmod +x ./node_modules/.bin/prisma
-# CMD ["sh", "-c", "./node_modules/.bin/prisma generate && node src/index.js"]
-# RUN chmod +x ./node_modules/.bin/prisma
-# RUN chmod +x ./node_modules/@prisma/engines/* || true
+# CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
 
 
 FROM node:18
 
 WORKDIR /app
 
+
 COPY package*.json ./
 
 
-RUN npm install -g prisma
-RUN npm install
+RUN npm install -g prisma nodemon && npm install
 
-
-RUN chmod +x ./node_modules/.bin/prisma && \
-    chmod -R +x ./node_modules/@prisma/engines || true
 
 COPY . .
 
 
 RUN npx prisma generate
 
-CMD ["node", "src/index.js"]
+
+CMD ["nodemon", "src/index.js"]
+
