--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,38 +1,20 @@
-# FROM node:18
-
-# WORKDIR /app
-
-
-# COPY package*.json ./
-
-# RUN npm install -g nodemon && npm install
-
-
-# COPY prisma ./prisma
-
-
-# COPY . .
-
-
-# CMD ["sh", "-c", "npx prisma generate && nodemon src/index.js"]
-
-
 FROM node:18
 
 WORKDIR /app
 
-
 COPY package*.json ./
 
 
-RUN npm install -g prisma nodemon && npm install
+RUN npm install -g prisma
+RUN npm install
 
+
+RUN chmod +x ./node_modules/.bin/prisma && \
+    chmod -R +x ./node_modules/@prisma/engines || true
 
 COPY . .
 
 
 RUN npx prisma generate
 
-
-CMD ["nodemon", "src/index.js"]
-
+CMD ["node", "src/index.js"]
