--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,6 +38,11 @@ services:
       - frontend
     volumes:
       - ./frontend/nginx:/etc/nginx/conf.d
+      - ./frontend/nginx:/etc/nginx/conf.d
+      - ./frontend/dist:/usr/share/nginx/html
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+      
 
 volumes:
   pgdata:
