--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,6 +1,22 @@
 server {
   listen 80;
-  server_name _;
+  server_name mivetcerca.seyscom.net;
+
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl;
+  server_name mivetcerca.seyscom.net;
+
+  ssl_certificate /etc/letsencrypt/live/mivetcerca.seyscom.net/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/mivetcerca.seyscom.net/privkey.pem;
 
   root /usr/share/nginx/html;
   index index.html;
