--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -40,8 +40,12 @@ server {
   listen 80;
   server_name mivetcerca.seyscom.net;
 
-  root /var/www/certbot;
   location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
     allow all;
+  }
+
+  location / {
+    return 404;
   }
 }
