--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,41 +1,3 @@
-# server {
-#   listen 80;
-#   server_name mivetcerca.seyscom.net;
-
-#   location /.well-known/acme-challenge/ {
-#     root /var/www/certbot;
-#   }
-
-#   location / {
-#     return 301 https://$host$request_uri;
-#   }
-# }
-
-# server {
-#   listen 443 ssl;
-#   server_name mivetcerca.seyscom.net;
-
-#   ssl_certificate /etc/letsencrypt/live/mivetcerca.seyscom.net/fullchain.pem;
-#   ssl_certificate_key /etc/letsencrypt/live/mivetcerca.seyscom.net/privkey.pem;
-
-#   root /usr/share/nginx/html;
-#   index index.html;
-
-#   location / {
-#     try_files $uri $uri/ /index.html;
-#   }
-
-#   location /api/ {
-#     proxy_pass http://backend:8000/;
-#     proxy_http_version 1.1;
-#     proxy_set_header Host $host;
-#     proxy_set_header X-Real-IP $remote_addr;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     proxy_set_header X-Forwarded-Proto $scheme;
-#   }
-# }
-
-# ./frontend/nginx/default.conf
 server {
   listen 80;
   server_name mivetcerca.seyscom.net;
@@ -46,6 +8,49 @@ server {
   }
 
   location / {
-    return 404;
+    return 301 https://$host$request_uri;
   }
 }
+
+server {
+  listen 443 ssl;
+  server_name mivetcerca.seyscom.net;
+
+  ssl_certificate /etc/letsencrypt/live/mivetcerca.seyscom.net/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/mivetcerca.seyscom.net/privkey.pem;
+
+  root /usr/share/nginx/html;
+  index index.html;
+
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
+
+  location /api/ {
+    proxy_pass http://backend:8000/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+}
+
+
+
+
+
+
+# server {
+#   listen 80;
+#   server_name mivetcerca.seyscom.net;
+
+#   location /.well-known/acme-challenge/ {
+#     root /var/www/certbot;
+#     allow all;
+#   }
+
+#   location / {
+#     return 404;
+#   }
+# }
