--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -76,8 +76,10 @@ server {
   listen 443 ssl;
   server_name mivetcerca.seyscom.net;
 
-  ssl_certificate /etc/letsencrypt/live/mivetcerca.seyscom.net/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/mivetcerca.seyscom.net/privkey.pem;
+ssl_certificate /etc/letsencrypt/archive/mivetcerca.seyscom.net/fullchain2.pem;
+ssl_certificate_key /etc/letsencrypt/archive/mivetcerca.seyscom.net/privkey2.pem;
+
+
 
   root /usr/share/nginx/html;
   index index.html;
