--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,16 +22,19 @@ services:
     depends_on:
       - db
 
-    frontend:
-    build: ./frontend
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-    depends_on:
-      - backend
+frontend:
+  build:
+    context: ./frontend
+    dockerfile: Dockerfile
+  ports:
+    - "80:80"
+    - "443:443"
+  volumes:
+    - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    - /etc/letsencrypt:/etc/letsencrypt:ro
+    - ./certbot/www:/var/www/certbot
+  depends_on:
+    - backend
 
 
   nginx:
