--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,3 +1,52 @@
+# version: "3.8"
+
+# services:
+#   db:
+#     image: postgres
+#     restart: always
+#     environment:
+#       POSTGRES_USER: admin
+#       POSTGRES_PASSWORD: secret
+#       POSTGRES_DB: clinica
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data
+#     expose:
+#       - "5432"
+
+#   backend:
+#     build: ./backend
+#     ports:
+#       - "8000:8000"
+#     environment:
+#       - DATABASE_URL=postgresql://admin:secret@db:5432/clinica
+#     depends_on:
+#       - db
+
+#   frontend:
+#     build:
+#       context: ./frontend
+#       dockerfile: Dockerfile
+#     depends_on:
+#       - backend
+
+#   nginx:
+#     build:
+#       context: ./frontend
+#     ports:
+#       - "80:80"
+#     depends_on:
+#       - frontend
+#     volumes:
+#       - ./frontend/nginx:/etc/nginx/conf.d
+#       - ./frontend/dist:/usr/share/nginx/html
+#       - ./certbot/conf:/etc/letsencrypt
+#       - ./certbot/www:/var/www/certbot
+      
+      
+
+# volumes:
+#   pgdata:
+
 version: "3.8"
 
 services:
@@ -35,3 +84,6 @@ services:
       - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+
+volumes:
+  pgdata:
