--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,5 +16,5 @@ COPY . .
 
 
 RUN npx prisma generate
-RUN npx prisma migrate deploy
+# RUN npx prisma migrate deploy
 CMD ["node", "src/index.js"]
