--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,3 +1,5 @@
+
+
 # version: "3.8"
 
 # services:
@@ -22,30 +24,25 @@
 #     depends_on:
 #       - db
 
-#   frontend:
-#     build:
-#       context: ./frontend
-#       dockerfile: Dockerfile
-#     depends_on:
-#       - backend
-
 #   nginx:
 #     build:
 #       context: ./frontend
+#       dockerfile: Dockerfile
 #     ports:
 #       - "80:80"
+#       - "443:443"
 #     depends_on:
-#       - frontend
+#       - backend
 #     volumes:
-#       - ./frontend/nginx:/etc/nginx/conf.d
-#       - ./frontend/dist:/usr/share/nginx/html
+#       - ./frontend/nginx/default.conf:/etc/nginx/conf.d/default.conf
 #       - ./certbot/conf:/etc/letsencrypt
 #       - ./certbot/www:/var/www/certbot
-      
-      
 
 # volumes:
 #   pgdata:
+
+
+
 
 version: "3.8"
 
@@ -64,8 +61,8 @@ services:
 
   backend:
     build: ./backend
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     environment:
       - DATABASE_URL=postgresql://admin:secret@db:5432/clinica
     depends_on:
